<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_exercises_categories"
            android:icon="@drawable/ic_baseline_exercise_24"
            android:title="@string/menu_exercises" />
        <item
            android:id="@+id/nav_mytrainings"
            android:icon="@drawable/ic_baseline_my_trainings_24"
            android:title="@string/menu_myTrainings" />
        <item
            android:id="@+id/nav_trainings"
            android:icon="@drawable/ic_baseline_trainings_24"
            android:title="@string/menu_trainings" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_favorites_24"
            android:title="@string/menu_favorites" />
    </group>
</menu>