<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registar">


    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:backgroundTint="@color/midGreen"
        android:textColorHint="@color/midGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/baloo"
        android:drawableLeft="@drawable/padlock"
        android:drawableStart="@drawable/padlock"
        android:drawablePadding="5dp"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:backgroundTint="@color/midGreen"
        android:textColorHint="@color/midGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/baloo"
        android:drawableLeft="@drawable/user"
        android:drawableStart="@drawable/user"
        android:drawablePadding="5dp"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:backgroundTint="@color/midGreen"
        android:textColorHint="@color/midGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/baloo"
        android:drawableLeft="@drawable/at"
        android:drawableStart="@drawable/at"
        android:drawablePadding="5dp"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:backgroundTint="@color/midGreen"
        android:textColorHint="@color/midGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/baloo"
        android:drawableLeft="@drawable/padlock"
        android:drawableStart="@drawable/padlock"
        android:drawablePadding="5dp"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:backgroundTint="@color/midGreen"
        android:textColorHint="@color/midGreen"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/baloo"
        android:drawableLeft="@drawable/calendar"
        android:drawableStart="@drawable/calendar"
        android:drawablePadding="5dp"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/regist"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/background"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="51dp"
        android:layout_height="52dp"
        app:tint="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>