<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_exercises_categories"
        android:name="pt.fct.ipm2.ui.exercises.ExercisesCategoriesFragment"
        android:label="@string/menu_categorias"
        tools:layout="@layout/fragment_exercisescategories" >
        <action
            android:id="@+id/action_nav_exercisescategories_to_nav_exercises"
            app:destination="@id/nav_exercises" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="pt.fct.ipm2.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_exercises"
            app:destination="@id/nav_exercises" />
        <action
            android:id="@+id/action_nav_home_to_nav_trainings"
            app:destination="@id/nav_trainings" />
        <action
            android:id="@+id/action_nav_home_to_nav_exercises_categories"
            app:destination="@id/nav_exercises_categories" />
        <action
            android:id="@+id/action_nav_home_to_trainingExercisesFragment"
            app:destination="@id/trainingExercisesFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_mytrainings"
        android:name="pt.fct.ipm2.ui.mytrainings.MyTrainingsFragment"
        android:label="@string/menu_myTrainings"
        tools:layout="@layout/fragment_mytrainings" >
        <action
            android:id="@+id/action_nav_mytrainings_to_trainingExercisesFragment"
            app:destination="@id/trainingExercisesFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_trainings"
        android:name="pt.fct.ipm2.ui.trainings.TrainingsFragment"
        android:label="@string/menu_trainings"
        tools:layout="@layout/fragment_trainings" >
        <action
            android:id="@+id/action_nav_trainings_to_trainingExercisesFragment"
            app:destination="@id/trainingExercisesFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_exercises"
        android:name="pt.fct.ipm2.ui.exercises.ExercisesFragment"
        tools:layout="@layout/fragment_exercises"
    >
        <argument
            android:name="category"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_exercises_to_showExerciseFragment"
            app:destination="@id/showExerciseFragment" />
    </fragment>
    <fragment
        android:id="@+id/trainingExercisesFragment"
        android:name="pt.fct.ipm2.ui.trainings.TrainingExercisesFragment"
        android:label="fragment_training_exercises"
        tools:layout="@layout/fragment_training_exercises" >
        <argument
            android:name="training"
            app:argType="pt.fct.ipm2.ui.trainings.Trainings" />
        <action
            android:id="@+id/action_trainingExercisesFragment_to_showExerciseFragment"
            app:destination="@id/showExerciseFragment" />
    </fragment>
    <fragment
        android:id="@+id/showExerciseFragment"
        android:name="pt.fct.ipm2.ui.home.ShowExerciseFragment"
        android:label="ShowExerciseFragment" >
        <argument
            android:name="exercise"
            app:argType="pt.fct.ipm2.ExercisesRecyclerView.Exercises" />
    </fragment>
    <fragment
        android:id="@+id/nav_favorites"
        android:name="pt.fct.ipm2.ui.favorites.FavoritesFragment"
        android:label="FavoritesFragment" >
        <action
            android:id="@+id/action_nav_favorites_to_showExerciseFragment"
            app:destination="@id/showExerciseFragment" />
    </fragment>


</navigation>